# network-security

./: .gitignore  Dockerfile  README.md  app.py  main.py  push_data.py  pyproject.toml  test_mongodb.py
.github/workflows/: main.yml
final_model/: preprocessor.pkl
networksecurity/cloud/: s3_syncer.py
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/entity/: config_entity.py
networksecurity/exception/: exception.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
networksecurity/utils/ml_utils/metric/: classification_metric.py
networksecurity/utils/ml_utils/model/: estimator.py
